# random_email_sender

./: .gitignore  Cargo.toml  LICENSE  README.md  buildall.sh  config.json
src/: configuration.rs  email_format.rs  email_reader.rs  email_sender.rs  error.rs  lib.rs  main.rs
src/snapshots/: random_email_sender__configuration__tests__load_from_specific_location.snap
