[package]
name = "random_email_sender"
version = "0.1.0"
edition = "2021"
default-run = "random_email_sender"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[dependencies]
glob = "0.3"
imap = "2.4"
lazy_static = "1.4"
lettre = "0.11"
native-tls = "0.2"
openssl = { version = "0.10", features = ["vendored"] }
parquet = "49.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
xz2 = "0.1"

[dev-dependencies]
insta = "1.34"
